Fixing ug where audio would play when you go back to repertoir page. Fixing bug with scrollbar adjusting on repertoire page when text wraps

--- a/styles/style.css
+++ b/styles/style.css
@@ -205,6 +205,7 @@ a.outLink:hover {
 .repertoireTable {
 	display: none;
 	border-collapse: collapse;
+	white-space: nowrap;
 }
 .repertoireTable tr:nth-child(even) {
 	background-color: rgba(80,80,80,.85);
